test/parserTest/pass/test7.ic
class OldClass {

}

class NewClass extends OldClass {
	int x;
	boolean b;
	//OldClass oc;
	
	void main () {
		OldClass oldExpr = new OldClass();
	}
}