test/parserTest/fail/test7.ic
class BadBlock {
	//testing variable declaration after a statement
	void badMethod () {
		if (someCondition) {
			int x = 0;
		}
		int y = 1; //illegal
	}
}